<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="#FFFFFF"
    tools:context=".Salados">

    <ImageView
        android:id="@+id/tostadas"
        android:layout_width="200dp"
        android:layout_height="174dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="207dp"
        android:layout_marginBottom="304dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tostada" />

    <ImageView
        android:id="@+id/tapas"
        android:layout_width="209dp"
        android:layout_height="176dp"
        android:layout_marginTop="412dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tostadas"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tapas" />

    <ImageView
        android:id="@+id/flauta"
        android:layout_width="205dp"
        android:layout_height="174dp"
        android:layout_marginStart="205dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="477dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/flauta" />

    <ImageView
        android:id="@+id/saladoTitle"
        android:layout_width="410dp"
        android:layout_height="191dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/salty"
        android:scaleType="fitEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/saladito"
        android:layout_width="197dp"
        android:layout_height="177dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="474dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/saladitos" />

    <RadioGroup
        android:id="@+id/opcionSaladoRG"
        android:layout_width="278dp"
        android:layout_height="207dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/saladitosRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionSaladitos"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/flautaRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionFlautas"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/tostadaRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionTostada"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/tapaRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/opcionTapa"
            android:textSize="24sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/saladoVolverButton"
        android:layout_width="122dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="285dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="#562929"
        android:onClick="saladoToCatalog"
        android:text="@string/saladosvolver"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saladoCanastaButton"
        android:layout_width="125dp"
        android:layout_height="63dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="285dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="2dp"
        android:backgroundTint="#57312B"
        android:onClick="saladoToConsulta"
        android:text="@string/irConsultaCafe"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/añadirSaladoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="146dp"
        android:layout_marginBottom="48dp"
        android:backgroundTint="#F44336"
        android:onClick="añadirSalado"
        android:text="@string/añadirsalados"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>