<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondopapel"
    tools:context=".ConsultarProductos">

    <TextView
        android:id="@+id/consultaTitleTV"
        android:layout_width="279dp"
        android:layout_height="163dp"
        android:text="@string/consultaTitle"
        android:textAlignment="center"
        android:textSize="38sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <EditText
        android:id="@+id/consultaListET"
        android:layout_width="278dp"
        android:layout_height="513dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:text="@string/consultaList"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultaTitleTV"
        app:layout_constraintVertical_bias="0.209" />

    <ImageView
        android:id="@+id/facturaIcon"
        android:layout_width="90dp"
        android:layout_height="79dp"
        android:layout_marginTop="16dp"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/facturaicon" />

    <Button
        android:id="@+id/volverConsultaButton"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginEnd="36dp"
        android:backgroundTint="#492222"
        android:onClick="goBackConsulta"
        android:text="@string/consultaVolver"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteListButton"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultaListET"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/deleteListButton"
        android:layout_width="135dp"
        android:layout_height="61dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="#F80000"
        android:onClick="deleteList"
        android:text="@string/consultaDelete"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/consultaListET"
        app:layout_constraintVertical_bias="0.36" />

</androidx.constraintlayout.widget.ConstraintLayout>