<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Catalogo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#a18272"
        android:orientation="vertical">

        <TextView
            android:id="@+id/welcomeTV"
            android:layout_width="match_parent"
            android:layout_height="162dp"
            android:fontFamily="sans-serif"
            android:text="@string/welcomeMessage"
            android:textAlignment="center"
            android:textColor="?attr/colorOnError"
            android:textSize="36sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/cafeImButton"
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:layout_margin="0dp"
            android:onClick="goToCafeteria"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/cafe" />

        <ImageButton
            android:id="@+id/pastelImButton"
            android:layout_width="match_parent"
            android:layout_height="209dp"
            android:layout_margin="0dp"
            android:onClick="goToPasteleria"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/cake" />

        <ImageButton
            android:id="@+id/saladoImButton"
            android:layout_width="match_parent"
            android:layout_height="211dp"
            android:layout_margin="0dp"
            android:onClick="goToSalados"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/bocatas" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="167dp"
            android:layout_height="59dp"
            android:backgroundTint="#402222"
            android:onClick="goBackMain"
            android:text="@string/goBackButton"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>