<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/panaderia_lacanasta"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/myName"
        android:layout_width="181dp"
        android:layout_height="43dp"
        android:layout_marginBottom="32dp"
        android:text="@string/miNombre"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/clase" />

    <Button
        android:id="@+id/sendButton"
        android:layout_width="174dp"
        android:layout_height="67dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#4B1504"
        android:onClick="goToCatalogo"
        android:text="@string/sendButton"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameField" />

    <EditText
        android:id="@+id/nameField"
        android:layout_width="250dp"
        android:layout_height="101dp"
        android:ems="10"
        android:fontFamily="sans-serif-black"
        android:hint="Introduzca un nombre"
        android:inputType="text"
        android:shadowColor="#F6F1F1"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_on_primary"
        android:textColorHint="#FDFBFB"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <TextView
        android:id="@+id/clase"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="36dp"
        android:text="@string/clase"
        android:textColor="#FFFFFF"
        android:textColorHighlight="@color/design_default_color_error"
        android:textColorHint="@color/design_default_color_error"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/canastaTitle"
        android:layout_width="339dp"
        android:layout_height="260dp"
        app:layout_constraintBottom_toTopOf="@+id/sendButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.296"
        app:srcCompat="@drawable/logocanasta" />

</androidx.constraintlayout.widget.ConstraintLayout>